Changes towards version 0.3:
- Prevent Syreen crew above 12 getting thrown out the airlock in
  Roster screen (bug #184); from chmmravatar, Alex
- Lander report messages now use the entire panel (bug #36), from chmmravatar
- Fix colour cycling in the roster screen (bug #279), from Nic
- Fixed last seen battle-group teleporting to Sol after invoking
  Talking Pet in Sol (bug #109) -Alex
- Fixed a dialog glitch on Slylandro homeworld (#442) -Michael
- Freeze planetary simulation at beginning of landing sequence to stop
  event bursts (bug #80) -Michael
- Extra 2 ship slots in supermelee, as in the PC SC2, and all the PC
  default teams, from chmmravatar (bug #248)
  NOTE: this breaks old team saves!
- Made functions for GET_GAME_STATE and SET_GAME_STATE - SvdB
- Fixed bug with entering closing portals (bug #108) - SvdB+chmmravatar
- Mouse cursor is now hidden in fullscreen mode (bug #173) -Mika
- Version checks inside the input code to flag incompatible changes --Michael
- Install location for content on unix systems is now ${prefix}/share/uqm
  instead of ${prefix}/lib/uqm - SvdB
- New main menu graphics from MarkVera, Paxtez, Nic (bug #393)
- Removed a place where you could ask for repairs when you shouldn't 
  (bug #432), from Nic
- Can use F10 to quit during splash screen as well as main menu -Michael
- Fixed starship location when being teleported from Procyon to
  the Earth Starbase after the Precursor bomb is installed. - Svdb
- Crew death on planet is now counted properly in all cases (bug #70) -Mika
- Fixed lockup in 'save failed' alert box (bug #397), from ghakko
- Fixed glitch in Pkunk animation (bug #354), from Paxtez
- Fixed Kohr-Ah final defeat message repeating (bug #426) -Mika
- Fix for picking up talking pet after Umgah genocide - from Paxtez
- MinGW compilation fixes - SvdB+Mika
- Bilinear scaler is now faster, has 24bpp mode and uses regions -Alex
- Accept CRLF line endings in .txt and .ts files - SvdB